--- a/V28/theorie.tex
+++ b/V28/theorie.tex
@@ -2,7 +2,7 @@
 \begin{document}
 \section{Zielsetzung}
 
-The purpose of the experiment is to determine the magnetic moment of a free electron.
+The purpose of this experiment is to determine the magnetic moment of a free electron.
 To implement this the electronspin-resonance is used.
 
 
@@ -11,52 +11,52 @@ In quantum mechanics the status of particles is described by a wave function.
 \begin{equation}
   \psi_{n,l,m}(r,\theta,\phi) = R_{n,l}(r) \cdot \Theta_{l,m}(\theta) \cdot \Phi_m(\phi)
 \end{equation}
-R is the radial part, $\Theta$ discribes the polar angle and
+Thereby r is the radial part, $\Theta$ discribes the polar angle and
 $\Phi$ is the part of the azimuth angle.
-n, l, m are quantum numbers.
-n is the main number and describes the niveaus of energy.
-l is the number of orbital angular momentum.
-m characterise the orientation of the system and can take the numbers 2l+1.
+N, l, m are quantum numbers.
+N is the principal quantum number and describes the energy level.
+L is the number of the orbital angular momentum.
+M characterises the orientation of the system and can take the values 2l+1.
 
-The current density defined by
+The current density is defined by
 \begin{equation}
-  S = \frac{\hbar}{2im_0}\cdot (\psi* \nabla \psi - \psi \nabla \psi* )
+  S = \frac{\hbar}{2im_0}\cdot (\psi* \nabla \psi - \psi \nabla \psi* ).
 \end{equation}
-It results of moving electrons on the shell of an atom.
-The resulting magnetic field have a magentic moment
+It results of moving electrons on the shell of an atom which implies a magnetic moment
 \begin{equation*}
-  \mu_z =\mu_b \cdot m
+  \mu_z =\mu_b \cdot m,
 \end{equation*}
-$\mu_b$ is the Bohr magneton.
+with $\su{\mu_b}$ the Bohr magneton.
 Figure \ref{fig:muz} shows the geometric thoughts to deduce the magentic moment.
 
-In a homogen magnetic field is the magnetic momentum of the electron shell
+In a homogeneous magnetic field the magnetic momentum of the electron shell is
 connected to the outer magnetic field.
-The quantization of the direction leads to the zeeman-effect.
-It describes the split of the energy niveau in teh outa magnetic field.
-It is shown in figure \ref{fig:eniveau}
-A split of an electron without orbital angular momentum is not expectet.
-But it happens a split into two niveaus.
-So the electron has to have a spin.
-The electron is a fermion and have the spin  $|S| = \sfrac{1}{2}$.
-The z-component of the magnetic moment can take two directions wich are determined by
-the quantum number $m_s \in [-1/2, 1/2]$ .
+The quantization of the direction leads to the zeeman-effect,
+which describes the split of the energy levels in the outer magnetic field.
+It is shown in figure \ref{fig:eniveau}.
+A split of an electron without orbital angular momentum is not expected.
+In the Stern-Gerlach-experiment the split of the electron into two resulting beams in a inhomogeneous
+magnetic field leads to the postulate of the existence of another angular moment, which is
+called spin.
+The electron is a fermion and has the spin  $|S| = \sfrac{1}{2}$.
+The z-component of the magnetic moment is able to take two directions which are determined by
+the quantum number $m_s \in [-1/2, 1/2]$. The relation between spin and related magnetic moment is
+often expressed in the unit of the bohr magneton
 \begin{equation*}
-  \mu_{sz} = -gm_s\mu_B
+  \mu_{sz} = -gm_s\mu_B.
 \end{equation*}
-The energy difference between two niveaus is
+The energy difference between two niveaus
 \begin{equation}
   \Delta E = g\mu_B B
 \end{equation}
-g is the gyromagnetic relation or Lande- Factor.
+is needed to get the electrons into a higher energy level. G the gyromagnetic relation or Landé-factor.
 
-In thermal equilibrium the occupation of the two energy niveaus is described
-by the Boltzmann-statistic. The lower niveau is on a higher level than the upper.
-The Energy $\Delta E$ is given to the system by inserting high frequenzy HF-quantum.
-The Spin of the electrons is turning over into a higher state.
-The changing of the spin changes the sample magnetization.
-It can be read out by a bridge circuit. 
-
+In thermal equilibrium the two energy levels are filled according to the Boltzmann-statistic.
+By a large number of electrons the upper level is less filled than the lower one.
+The Energy $\su{\Delta E}$ is given to the system by inserting high frequenzy HF-quantum.
+Because of this elctrons are able to go from the lower level to the upper.
+Therefore the electrons' spin is flipped. This methode of transporting electrons into a
+higher level of energy by flipping the spin is called the electronspin-resonance.
 
 \section{Durchführung}
 \end{document}
