--- a/V28/theorie.tex
+++ b/V28/theorie.tex
@@ -1,12 +1,12 @@
 \input{header.tex}
 \begin{document}
-\section{Zielsetzung}
+\section{Objective}
 
 The purpose of this experiment is to determine the magnetic moment of a free electron.
 To implement this the electronspin-resonance is used.
 
 
-\section{Theorie}
+\section{Theory}
 In quantum mechanics the status of particles is described by a wave function.
 \begin{equation}
   \psi_{n,l,m}(r,\theta,\phi) = R_{n,l}(r) \cdot \Theta_{l,m}(\theta) \cdot \Phi_m(\phi)
@@ -58,5 +58,16 @@ Because of this elctrons are able to go from the lower level to the upper.
 Therefore the electrons' spin is flipped. This methode of transporting electrons into a
 higher level of energy by flipping the spin is called the electronspin-resonance.
 
-\section{Durchführung}
+\section{Experimental setup}
+The experimenal setup is presented in figue \ref{fig:aufbau}.
+
+As a sample Diphenylpikrylhydeazyl with its chemical structure of one free electron is used.
+This is sample is located in the HF-coil. The coil is supplied with current of a quarstable HF-generator and connected
+with them over a bridge circuit. The variable elements R, $\su{C_{grob}}$ and $\su{C_{fein}}$ are needed
+to adjust the bridge voltage. Through an overlap receiver the interference voltage is suppressed
+and the bridge voltage amplified. \newline
+The first apmlifier enhances the input signal and also suppresses the interference voltage.
+
+
+
 \end{document}
