--- a/V28/theorie.tex
+++ b/V28/theorie.tex
@@ -59,10 +59,10 @@ Therefore the electrons' spin is flipped. This methode of transporting electrons
 higher level of energy by flipping the spin is called the electronspin-resonance.
 
 \section{Experimental setup}
-The experimenal setup is presented in figue \ref{fig:aufbau}.
+The experimenal setup is presented in figure \ref{fig:aufbau}.
 
 As a sample Diphenylpikrylhydeazyl with its chemical structure of one free electron is used.
-This is sample is located in the HF-coil. The coil is supplied with current of a quarstable HF-generator and connected
+This sample is located in the HF-coil. The coil is supplied with current of a quarstable HF-generator and connected
 with them over a bridge circuit. The variable elements R, $\su{C_{grob}}$ and $\su{C_{fein}}$ are needed
 to adjust the bridge voltage. Through an overlap receiver the interference voltage is suppressed
 and the bridge voltage amplified. \newline
