--- a/V46/lit.bib
+++ b/V46/lit.bib
@@ -17,3 +17,9 @@
   url = {https://ecee.colorado.edu/~bart/book/effmass.htm},
   urldate = {2018-10-23}
 }
+@online{n2,
+  author = {},
+  title = {brechungsindex GaAs},
+  url = {https://www.filmetrics.de/refractive-index-database/GaAs/Gallium-Arsenide},
+  urldate = {2018-11-06}
+}
