--- a/V16/theorie.tex
+++ b/V16/theorie.tex
@@ -1,1 +1,14 @@
+\input{header.tex}
+\usepackage{upgreek}
+\begin{document}
+\section{Zielsetzung}
 
+\section{Theorie}
+\begin{equation*}
+    -\frac{dE}{dx} = -\frac{4\pi e^4z^2NZ}{m_0v^2(4\pi \epsilon_0)^2} \ln \frac{2m_0v^2}{I}
+\end{equation*}
+\begin{equation*}
+    \frac{d\sigma}{d\Omega}(\Uptheta) = \frac{1}{(4\pi \epsilon_0)^2} \Big(\frac{zZe^2}{4E_{\alpha}}\Big)^2 \frac{1}{\sin^4\frac{\Uptheta}{2}}
+\end{equation*}
+
+\end{document}
