--- a/V46/auswertung.tex
+++ b/V46/auswertung.tex
@@ -155,7 +155,7 @@ Die linerare Regression wurde mit
 durchgeführt.
 Der Parameter lautet:
 \begin{align*}
-  a &= (17\pm12) \,\mathrm{\frac{1}{\mu m^3}}\\
+  a &= (23\pm24) \,\mathrm{\frac{1}{\mu m^3}}\\
 \end{align*}
 
 Mit Formel \ref{eqn:meff} ergibt sich
@@ -171,7 +171,7 @@ Der Wert für B wird aus \ref{eqn:bfeld} übernommen und der für N liegt,
 wie oben bereits erwähnt, bei N=$1,2\cdot 10^{18}\,\mathrm{cm^3}$.
 Somit lautet das Ergebnis für die effektive Masse:
 \begin{equation*}
-  m* =(4,5\pm 1,6)\cdot10^{-33}\, \mathrm{kg}
+  m* =(1,2\pm 0,5)\cdot10^{-32}\, \mathrm{kg}
 \end{equation*}
 Der Fehler berechnet sich mit
 \begin{equation*}
@@ -201,6 +201,6 @@ und Aufgrund von Überhitzung zeitweise komplett zusammen brach.
 Dies führt schließlich auch dazu, dass der Fehler der berechneten effektiven Masse extrem hoch ist.
 Mit dem Literaturwert $\sfrac{m*}{m_e}=0,067$ \cite{meff} und der berechneten effektiven Masse
 \begin{equation*}
-  \frac{m*}{m_e} = (4,94 \pm 1,76)\cdot 10^{-3}
+  \frac{m*}{m_e} = (0,013 \pm 0,005)
 \end{equation*}
-ergibt sich eine Abweichung von $92,63\%$.
+ergibt sich eine Abweichung von $80,60\%$.
