--- a/V46/theorie.tex
+++ b/V46/theorie.tex
@@ -105,6 +105,7 @@ ein Drehwinkel der Polarisationseben von
 \begin{equation}
   \theta_{\text{frei}}(\lambda)=\frac{\text{e}_0^3}{8 \pi^2 \epsilon_0 \text{c}^3}
   \frac{\lambda^2}{{m^*}^2}\frac{N L B}{n}.
+  \label{eqn:meff}
 \end{equation}
 Dieser Zusammenhang ist durch das Ersetzen der Masse auch für Kristallelektronen gültig und wird deswegen zur Bestimmung der
 effektiven Masse verwendet.
