ein bisschen Theorie

--- a/V16/theorie.tex
+++ b/V16/theorie.tex
@@ -4,11 +4,23 @@
 \section{Zielsetzung}
 
 \section{Theorie}
+Beim Durchlauf von positiv geladenen $\su{\alpha}$-Teilchen durch Materie kann es zu
+zwei unterschiedlichen Wechselwirkungen kommen. Die erste Wechselwirkung findet mit negaitv geladenen Hüllenelektron
+statt und die zweite mit dem positiven Atomkern.
+\newline
+Die Bethe-Bloch-Gleichung beschreibt den Energieverlust
 \begin{equation*}
     -\frac{dE}{dx} = -\frac{4\pi e^4z^2NZ}{m_0v^2(4\pi \epsilon_0)^2} \ln \frac{2m_0v^2}{I}
 \end{equation*}
+der $\su{\alpha}$-Teilchen beim Durchgang durch die Materie.
+Hierbei gibt N die Atomdichte, $\su{m_0}$ die Ruheenergie des Hüllenelektrons, Z die Kernladungszahl und I die mittlere Ionisationsenergie
+des Targetmaterials an.
+
+Bei der Streuung der $\su{\alpha}$-Teilchen am Atomkern kommt es durch die Coulombkraft zu
+einer Richtungsänderung um den Streuwinkel $\su{\Theta}$. \newline
+Dieser Streuwinkel lässt sich mit der Rutherford-Streuformel berechnen
 \begin{equation*}
-    \frac{d\sigma}{d\Omega}(\Uptheta) = \frac{1}{(4\pi \epsilon_0)^2} \Big(\frac{zZe^2}{4E_{\alpha}}\Big)^2 \frac{1}{\sin^4\frac{\Uptheta}{2}}
+    \frac{d\sigma}{d\Omega}(\Uptheta) = \frac{1}{(4\pi \epsilon_0)^2} \Big(\frac{zZe^2}{4E_{\alpha}}\Big)^2 \frac{1}{\sin^4\frac{\Uptheta}{2}}.
 \end{equation*}
 
 \end{document}
