ein bisschen mehr Theorie

--- a/V16/theorie.tex
+++ b/V16/theorie.tex
@@ -1,5 +1,6 @@
 \input{header.tex}
 \usepackage{upgreek}
+\usepackage{mhchem}
 \begin{document}
 \section{Zielsetzung}
 
@@ -23,4 +24,11 @@ Dieser Streuwinkel lässt sich mit der Rutherford-Streuformel berechnen
     \frac{d\sigma}{d\Omega}(\Uptheta) = \frac{1}{(4\pi \epsilon_0)^2} \Big(\frac{zZe^2}{4E_{\alpha}}\Big)^2 \frac{1}{\sin^4\frac{\Uptheta}{2}}.
 \end{equation*}
 
+\section{Versuchsaufbau}
+Der Versuchsaufbau ist in Abbildung \ref{fig:aufbau} dargestellt.
+\newline
+Der Versuch findet im Vakuum statt, da die $\su{\alpha}$-Strahlung in Luft nur eine sehr geringe
+Reichweite hat. Als $\su{\alpha}$-Strahler dient ein $\ce{^{241}}\su{Am}$-Präparat.
+Die dort austretenen Teilchen werden kollimiert, damit diese senktrecht auf die Goldfolie treffen.
+An dieser Folie werden die Teilchen gestreut und von einem Surface-Barrier-Detektor detektiert.
 \end{document}
