--- a/V16/theorie.tex
+++ b/V16/theorie.tex
@@ -52,4 +52,13 @@ An dieser Folie werden die Teilchen gestreut und von einem Surface-Barrier-Detek
 Zu Beginn des Versuches wird die Apparatur über eine Vakuumspumpe evakuiert.
 Um einen geraden Durchtritt der $\su{\alpha}$-Teilchen sicher zu stellen, wird der Detektor zuerst
 in den Strahlengang richtig hereingestellt.
+\newline
+Für die Bestimmung der Foliendicke wird eine Energieverlustmessung durchgeführt.
+Dabei werden die Pulshöhen der Detektorpulse in Abhängigkeit des Kammerdrucks aufgenommen.
+Durch das Feindrosselventil kann der Kammerdruck langsam erhöht werden.
+Zur Ermittlung der mittleren Pulshöhe wird das Oszilloskop in das Programm "Nachleuchten" gestellt,
+an dem dann die Pulshöhen abgelesen werden können.\newline
+Diese Messung wird einmal mit und einmal ohne Goldfolie gemacht.
+\newline
+Um den differentiellen Wirkungsquerschnitt einer Goldfolie zu bestimmen, wird die Zählrate
 \end{document}
