Durchführung weiter gemacht

--- a/V16/theorie.tex
+++ b/V16/theorie.tex
@@ -12,7 +12,7 @@ zwei unterschiedlichen Wechselwirkungen kommen. Die erste Wechselwirkung findet 
 statt und die zweite mit dem positiven Atomkern.
 \newline
 Bei der Wechselwirkung zwischen $\su{\alpha}$-Teilchen und dem Hüllenelektronen kommt es durch
-Anregungs und Ionisationsprozesse zu Energieabgabe.
+Anregungs- und Ionisationsprozesse zur Energieabgabe.
 Es wird angenommen, dass es aufgrund der größeren Masse der $\su{\alpha}$-Teilchen gegenüber
 der Elektronenmasse zu keiner Ablenkung der $\su{\alpha}$-Teilchen kommt.
 \newline
@@ -60,5 +60,13 @@ Zur Ermittlung der mittleren Pulshöhe wird das Oszilloskop in das Programm "Nac
 an dem dann die Pulshöhen abgelesen werden können.\newline
 Diese Messung wird einmal mit und einmal ohne Goldfolie gemacht.
 \newline
-Um den differentiellen Wirkungsquerschnitt einer Goldfolie zu bestimmen, wird die Zählrate
+Um den differentiellen Wirkungsquerschnitt einer Goldfolie zu bestimmen, wird die Zählrate in Abhängigkeit
+des Streuwinkels $\su{\Uptheta}$ aufgenommen. Dafür werden unterschiedliche Winkel eingestellt.
+Die Dauer der Messung wird durch den statistischen Fehler der Zählrate
+$\sqrt{I}$ festgelegt, da der $\su{\alpha}$-Zerfall poissonverteilt ist.
+\newline
+Zur Untersuchung der Mehrfachstreuung wird die Streuung der unterschiedliche Folien gemessen. Dafür wird ein fester Winkel
+eingestellt.
+\newline
+Die Aktivität wird außerdem ohne Folie für 120\,s gemessen.
 \end{document}
