--- a/V16/header.tex
+++ b/V16/header.tex
@@ -12,7 +12,7 @@
 \usepackage{polyglossia}
 \usepackage[style=numeric, backend=biber]{biblatex} % mit [style = alphabetic oder numeric] nach polyglossia
 \addbibresource{lit.bib}
-\setmainlanguage{english}
+\setmainlanguage{german}
 
 \usepackage[autostyle]{csquotes}
 \usepackage{amsmath} % unverzichtbare Mathe-Befehle
