--- a/V16/theorie.tex
+++ b/V16/theorie.tex
@@ -34,6 +34,8 @@ Dieser Streuwinkel lässt sich mit der Rutherford-Streuformel berechnen
 \end{equation*}
 Der differentielle Wirkungsquerschnitt $\frac{d\sigma}{d\Omega}$ beschreibt gerade die Intensitätsverteilung
 der gestreuten $\su{\alpha}$-Teilchen in den Raumwinkel $\su{\Uptheta}$.
+
+\newpage
 \section{Versuchsaufbau}
 Der Versuchsaufbau ist in Abbildung \ref{fig:aufbau} dargestellt.
 \begin{figure}
@@ -45,8 +47,17 @@ Der Versuchsaufbau ist in Abbildung \ref{fig:aufbau} dargestellt.
 \newline
 Der Versuch findet im Vakuum statt, da die $\su{\alpha}$-Strahlung in Luft nur eine sehr geringe
 Reichweite hat. Als $\su{\alpha}$-Strahler dient ein $\ce{^{241}}\su{Am}$-Präparat.
-Die dort austretenen Teilchen werden kollimiert, damit diese senktrecht auf die Goldfolie treffen.
-An dieser Folie werden die Teilchen gestreut und von einem Surface-Barrier-Detektor detektiert.
+Die aus der Quelle austretenen Teilchen werden mithilfe von zwei 2\,mm Schlitzblenden kollimiert,
+damit diese senktrecht auf die Goldfolie treffen.
+An dieser Folie werden die Teilchen um den Winkel $\su{\Uptheta}$ gestreut und von einem Detektor
+aufgenommen. Bei diesem Detektor handelt es sich um einen Surface-Barrier-Detektor, also einen
+Halbleiter Detektor, an dem die einfallenden $\su{\alpha}$-Teilchen in der Sperrschicht Elektronen-Loch-Paare
+erzeugen und durch ihre Energieabgabe die Exzitonen in ein höheres Energieniveau anheben, wo diese frei beweglich sind.
+%Durch ein anliegendes elektrisches Feld werden die Exzitonen zur jeweiligen Zone beschleunigt werden und durch
+Um die vom Detektor erfassten Impulse besser verarbeiten zu können, wird ein Verstärker
+verwendet.
+Als Messgeräte dienen dann ein Oszilloskop zur Bestimmung des Energieverlusts und ein Zählwerk zur
+Bestimmung des Streuquerschnitts.
 
 \section{Durchführung}
 Zu Beginn des Versuches wird die Apparatur über eine Vakuumspumpe evakuiert.
@@ -68,5 +79,5 @@ $\sqrt{I}$ festgelegt, da der $\su{\alpha}$-Zerfall poissonverteilt ist.
 Zur Untersuchung der Mehrfachstreuung wird die Streuung der unterschiedliche Folien gemessen. Dafür wird ein fester Winkel
 eingestellt.
 \newline
-Die Aktivität wird außerdem ohne Folie für 120\,s gemessen.
+Die Aktivität wird außerdem ohne Folie für 120\,s im Vakuum gemessen.
 \end{document}
