--- a/V16/theorie.tex
+++ b/V16/theorie.tex
@@ -8,7 +8,7 @@ Aus der Streuung kann zusätzlich durch die Energieverlustmessung der $\su{\alph
 auch die Foliendicke bestimmt werden.
 \section{Theorie}
 Beim Durchlauf von positiv geladenen $\su{\alpha}$-Teilchen durch Materie kann es zu
-zwei unterschiedlichen Wechselwirkungen kommen. Die erste Wechselwirkung findet mit negaitv geladenen Hüllenelektron
+zwei unterschiedlichen Wechselwirkungen kommen. Die erste Wechselwirkung findet mit negativ geladenen Hüllenelektron
 statt und die zweite mit dem positiven Atomkern.
 \newline
 Bei der Wechselwirkung zwischen $\su{\alpha}$-Teilchen und dem Hüllenelektronen kommt es durch
@@ -32,6 +32,7 @@ Dieser Streuwinkel lässt sich mit der Rutherford-Streuformel berechnen
 \begin{equation*}
     \frac{d\sigma}{d\Omega}(\Uptheta) = \frac{1}{(4\pi \epsilon_0)^2} \Big(\frac{zZe^2}{4E_{\alpha}}\Big)^2 \frac{1}{\sin^4\frac{\Uptheta}{2}}.
 \end{equation*}
+$\su{E_{\alpha}}$ beschreibt dabei die mittlere kinetische Enegie der $\su{\alpha}$-Teilchen .
 Der differentielle Wirkungsquerschnitt $\frac{d\sigma}{d\Omega}$ beschreibt gerade die Intensitätsverteilung
 der gestreuten $\su{\alpha}$-Teilchen in den Raumwinkel $\su{\Uptheta}$.
 
@@ -53,23 +54,22 @@ An dieser Folie werden die Teilchen um den Winkel $\su{\Uptheta}$ gestreut und v
 aufgenommen. Bei diesem Detektor handelt es sich um einen Surface-Barrier-Detektor, also einen
 Halbleiter Detektor, an dem die einfallenden $\su{\alpha}$-Teilchen in der Sperrschicht Elektronen-Loch-Paare
 erzeugen und durch ihre Energieabgabe die Exzitonen in ein höheres Energieniveau anheben, wo diese frei beweglich sind.
-%Durch ein anliegendes elektrisches Feld werden die Exzitonen zur jeweiligen Zone beschleunigt werden und durch
-Um die vom Detektor erfassten Impulse besser verarbeiten zu können, wird ein Verstärker
-verwendet.
+Durch ein anliegendes elektrisches Feld werden diese zur jeweiligen Elektorde beschleunigt.
+Die führt zu einem messbaren Stromimpuls an den Elektroden. Um die vom Detektor erfassten Impulse besser verarbeiten
+zu können, wird ein Verstärker verwendet.
 Als Messgeräte dienen dann ein Oszilloskop zur Bestimmung des Energieverlusts und ein Zählwerk zur
 Bestimmung des Streuquerschnitts.
 
 \section{Durchführung}
 Zu Beginn des Versuches wird die Apparatur über eine Vakuumspumpe evakuiert.
-Um einen geraden Durchtritt der $\su{\alpha}$-Teilchen sicher zu stellen, wird der Detektor zuerst
-in den Strahlengang richtig hereingestellt.
+Um einen geraden Durchtritt der $\su{\alpha}$-Teilchen zu gewährleisten, wird der Detektor justiert.
 \newline
 Für die Bestimmung der Foliendicke wird eine Energieverlustmessung durchgeführt.
 Dabei werden die Pulshöhen der Detektorpulse in Abhängigkeit des Kammerdrucks aufgenommen.
 Durch das Feindrosselventil kann der Kammerdruck langsam erhöht werden.
 Zur Ermittlung der mittleren Pulshöhe wird das Oszilloskop in das Programm "Nachleuchten" gestellt,
 an dem dann die Pulshöhen abgelesen werden können.\newline
-Diese Messung wird einmal mit und einmal ohne Goldfolie gemacht.
+Diese Messung wird einmal mit und einmal ohne Goldfolie durchgeführt..
 \newline
 Um den differentiellen Wirkungsquerschnitt einer Goldfolie zu bestimmen, wird die Zählrate in Abhängigkeit
 des Streuwinkels $\su{\Uptheta}$ aufgenommen. Dafür werden unterschiedliche Winkel eingestellt.
