weil wegen Referenzen

--- a/V16/theorie.tex
+++ b/V16/theorie.tex
@@ -19,6 +19,7 @@ der Elektronenmasse zu keiner Ablenkung der $\su{\alpha}$-Teilchen kommt.
 Die Bethe-Bloch-Gleichung beschreibt den Energieverlust
 \begin{equation*}
     -\frac{dE}{dx} = -\frac{4\pi e^4z^2NZ}{m_0v^2(4\pi \epsilon_0)^2} \ln \frac{2m_0v^2}{I}
+\label{eqn:bethebloch}
 \end{equation*}
 der $\su{\alpha}$-Teilchen beim Durchgang durch die Materie.
 Hierbei gibt N die Atomdichte, $\su{m_0}$ die Ruheenergie des Hüllenelektrons, Z die Kernladungszahl und I die mittlere Ionisationsenergie
